updated the template and deleted old ones

--- a/example/main.tex
+++ b/example/main.tex
@@ -21,7 +21,7 @@
 \UsingTemplate{Tasks}
 % \UsingTemplate{Solutions} % "Tasks" or "Solutions" or "Blank"
 
-\titlepage{Районный}{2022-2023}{9}{chem9-1-tasks}
+\titlepage{Районный}{2022-2023}{10}{chem10-1-tasks}
 % \titlepage{Аудандық}{2022-2023}{10}{chem10-1-tasks}
 
 \tableofcontents
@@ -29,7 +29,9 @@
 % \include{regulations-kaz}
 \include{regulations-rus}
 
-\input{problems/great-problem/main}
+\input{problems/great-problem/author-task}
+% \input{problems/great-problem/author-sol}
+% \input{problems/great-problem/author-blank}
 
 
 \end{document}
