--- a/example/regulations-rus.tex
+++ b/example/regulations-rus.tex
@@ -1,3 +1,4 @@
+\phantomsection
 \section*{\fontspec{PT Sans}Регламент олимпиады:}\vspace{5pt}
 \addcontentsline{toc}{section}{Регламент олимпиады}
 
