added command for practical tasks/solutions

--- a/example/main.tex
+++ b/example/main.tex
@@ -21,6 +21,8 @@
 \UsingTemplate{Tasks}
 % \UsingTemplate{Solutions} % "Tasks" or "Solutions" or "Blank"
 
+% \Practical
+
 \titlepage{Районный}{2022-2023}{10}{chem10-1-tasks}
 % \titlepage{Аудандық}{2022-2023}{10}{chem10-1-tasks}
 
