problem points tables in kazakh

--- a/example/national_olymp.cls
+++ b/example/national_olymp.cls
@@ -236,7 +236,7 @@
   \small
     \begin{tabularx}{\textwidth}{|X|X|X|X|X|}
       \hline
-      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{Всего} & \cellcolor{gray!45} \textbf{Вес(\%)} \\
+      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Всего}\else{Барлығы}\fi} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Вес}\else{Үлесі}\fi(\%)} \\
       \hline
       #1 & #2 & #3 \\
       \hline
@@ -250,7 +250,7 @@
   \small
     \begin{tabularx}{\textwidth}{|X|X|X|X|X|}
       \hline
-      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.2} & \cellcolor{gray!45} \textbf{Всего} & \cellcolor{gray!45} \textbf{Вес(\%)} \\
+      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.2} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Всего}\else{Барлығы}\fi} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Вес}\else{Үлесі}\fi(\%)} \\
       \hline
       #1 & #2 & #3 & #4 \\
       \hline
@@ -264,7 +264,7 @@
   \small
     \begin{tabularx}{\textwidth}{|X|X|X|X|X|}
       \hline
-      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.2} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.3} & \cellcolor{gray!45} \textbf{Всего} & \cellcolor{gray!45} \textbf{Вес(\%)} \\
+      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.2} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.3} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Всего}\else{Барлығы}\fi} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Вес}\else{Үлесі}\fi(\%)} \\
       \hline
       #1 & #2 & #3 & #4 & #5 \\
       \hline
@@ -278,7 +278,7 @@
   \small
     \begin{tabularx}{\textwidth}{|X|X|X|X|X|X|}
       \hline
-      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.2} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.3} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.4} & \cellcolor{gray!45} \textbf{Всего} & \cellcolor{gray!45} \textbf{Вес(\%)} \\
+      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.2} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.3} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.4} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Всего}\else{Барлығы}\fi} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Вес}\else{Үлесі}\fi(\%)} \\
       \hline
       #1 & #2 & #3 & #4 & #5 & #6 \\
       \hline
@@ -292,7 +292,7 @@
   \small
     \begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
       \hline
-      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.2} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.3} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.4} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.5} & \cellcolor{gray!45} \textbf{Всего} & \cellcolor{gray!45} \textbf{Вес(\%)} \\
+      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.2} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.3} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.4} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.5} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Всего}\else{Барлығы}\fi} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Вес}\else{Үлесі}\fi(\%)} \\
       \hline
       #1 & #2 & #3 & #4 & #5 & #6 & #7 \\
       \hline
@@ -306,7 +306,7 @@
   \small
     \begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|X|}
       \hline
-      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.2} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.3} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.4} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.5} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.6} & \cellcolor{gray!45} \textbf{Всего} & \cellcolor{gray!45} \textbf{Вес(\%)} \\
+      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.2} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.3} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.4} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.5} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.6} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Всего}\else{Барлығы}\fi} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Вес}\else{Үлесі}\fi(\%)} \\
       \hline
       #1 & #2 & #3 & #4 & #5 & #6 & #7 & #8 \\
       \hline
@@ -320,7 +320,7 @@
   \small
     \begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|X|X|}
       \hline
-      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.2} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.3} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.4} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.5} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.6} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.7} & \cellcolor{gray!45} \textbf{Всего} & \cellcolor{gray!45} \textbf{Вес(\%)} \\
+      \cellcolor{gray!45} \textbf{\arabic{problemcount}.1} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.2} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.3} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.4} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.5} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.6} & \cellcolor{gray!45} \textbf{\arabic{problemcount}.7} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Всего}\else{Барлығы}\fi} & \cellcolor{gray!45} \textbf{\ifnum\value{lang}=1{Вес}\else{Үлесі}\fi(\%)} \\
       \hline
       #1 & #2 & #3 & #4 & #5 & #6 & #7 & #8 & #9 \\
       \hline
