--- a/example/problems/great-problem/author-sol.tex
+++ b/example/problems/great-problem/author-sol.tex
@@ -4,7 +4,7 @@
 \ProblemPointsFour{1}{2}{3}{3}{9}{11}
 
 \begin{solbox}{1 \ball}
-    Есть два органических вещества с молекулярной формулой \ce{C2H6O} — этанол и диметиловый эфир. Из них только в первом есть гидроксо-группа, поэтому ответ — $\ce{H3C-CH2-OH}$ \em{(1 \ball)}.
+    Есть два органических вещества с молекулярной формулой \CH{C2H6O} — этанол и диметиловый эфир. Из них только в первом есть гидроксо-группа, поэтому ответ — $\CH{H3C-CH2-OH}$ \em{(1 \ball)}.
 \end{solbox}
 
 \begin{solbox}{2 \balla}
@@ -26,7 +26,7 @@
 
     \[ \Delta T_f = -i k_f m \]
 
-    Сахар имеет формулу \ce{C12H22O11} и для него фактор Вант-Гоффа, $i$, равен единице. $k_f$ равна \qty{1.86}{\kg\celsius\per\mole} для воды.
+    Сахар имеет формулу \CH{C12H22O11} и для него фактор Вант-Гоффа, $i$, равен единице. $k_f$ равна \qty{1.86}{\kg\celsius\per\mole} для воды.
 
     \[ m = \frac{\qty{-1.3}{\celsius}}{\qty{-1.86}{\kg\celsius\per\mole}} = \qty{0.70}{\mole\per\kg} \]
 
@@ -36,9 +36,9 @@
 \end{solbox}
 
 \begin{solbox}{3 \balla}
-    \[ r_0 = k \cdot [\ce{CO}]_0^m \cdot [\ce{Cl2}]_0^n \]
-    \[ r_1 = k \cdot [\ce{CO}]_1^m \cdot [\ce{Cl2}]_0^n \]
-    \[ \frac{r_0}{r_1} = \left( \frac{[\ce{CO}]_0}{[\ce{CO}]_1} \right)^m = \left(\frac{1}{2}\right)^m = \frac12 \]
+    \[ r_0 = k \cdot [\CH{CO}]_0^m \cdot [\CH{Cl2}]_0^n \]
+    \[ r_1 = k \cdot [\CH{CO}]_1^m \cdot [\CH{Cl2}]_0^n \]
+    \[ \frac{r_0}{r_1} = \left( \frac{[\CH{CO}]_0}{[\CH{CO}]_1} \right)^m = \left(\frac{1}{2}\right)^m = \frac12 \]
     \[ m = 1 \]
 
     Ответ: порядок реакции по угарному газу равен одному (\em{3 \balla}).
