--- a/example/problems/great-problem/author-task.tex
+++ b/example/problems/great-problem/author-task.tex
@@ -3,16 +3,16 @@
 \ProblemPointsFour{1}{2}{3}{3}{9}{11}
 
 \begin{enumerate}
-    \item Нарисуйте структуру вещества \ce{C2H6O} если известно, что в нем присутствует OH-группа.
+    \item Нарисуйте структуру вещества \CH{C2H6O} если известно, что в нем присутствует OH-группа.
     \item При какой температуре атомы гелия будут иметь среднеквадратичную скорость \qty{3.5e6}{\meter\per\second}?
     \item Сколько грамм сахара было растворено в 100 г воды, если ее температура замерзания опустилась до \qty{-1.3}{\celsius}?
 \end{enumerate}
 
 Фосген образуется из угарного газа и хлора в соответствии со следующим уравнением:
 
-\begin{equation*}
-    \ce{CO + Cl2 -> COCl2}
-\end{equation*}
+\begin{gather*}
+    \CH{CO + Cl2 -> COCl2}
+\end{gather*}
 
 \begin{enumerate}
 \setcounter{enumi}{3}
