created new environment Table; added wrapfig, tikz; fixed isotope and uqty commands

--- a/example/main.tex
+++ b/example/main.tex
@@ -1,4 +1,4 @@
-\documentclass{national_olymp}
+\documentclass[12pt]{national_olymp}
 % \usepackage[utf8]{inputenc}
 
 \input{siunitx.cfg}
@@ -14,7 +14,7 @@
 \usepackage{hyphenat}
 \hyphenation{вос-ста-но-ви-тель-но еті-ле-ді кристалло-гидрата}
 
-\usepackage[italic]{mathastext}
+\usepackage[italic, symbolgreek]{mathastext}
 
 \begin{document}
 
