updated title page and commands for blanks

--- a/example/main.tex
+++ b/example/main.tex
@@ -1,9 +1,9 @@
-\documentclass[12pt]{national_olymp}
+\documentclass[10pt]{national_olymp}
 % \usepackage[utf8]{inputenc}
 
-\input{siunitx.cfg}
+\input{misc/siunitx.cfg}
 
-\title{qazcho_tasks}
+\title{qazcho_template}
 \author{}
 \date{}
 
@@ -28,7 +28,8 @@
 % \titlepage{Районный}{2022-2023}{10}{chem10-1-blank}
 \titlepage{Аудандық}{2022-2023}{10}{chem10-1-tasks}
 
-\tableofcontents
+% \tableofcontents
+% \clearpage
 
 \include{regulations-kaz}
 % \include{regulations-rus}
