added pgfplots package

--- a/example/national_olymp.cls
+++ b/example/national_olymp.cls
@@ -61,6 +61,9 @@
 
 \RequirePackage{tikz, lipsum, wrapfig, indentfirst}
 
+\RequirePackage{pgfplots}
+\pgfplotsset{compat=1.18}
+
 
 % Body of the class
 
