--- a/example/problems/great-problem/author-blank.tex
+++ b/example/problems/great-problem/author-blank.tex
@@ -4,8 +4,12 @@
 
 \answerbox{1cm}
 
-\answerbox{2cm}
+\answerbox{2.5cm}
 
 \answerbox{3cm}
 
-\answerbox{3cm}
+\answerbox{4cm}
+
+\Answerbox{2.5cm}
+
+\ansbox{19}{2.5cm}
