--- a/example/main.tex
+++ b/example/main.tex
@@ -38,9 +38,9 @@
 % \include{regulations-kaz}
 \include{regulations-rus}
 
-\input{problems/great-problem/author-task}
-% \input{problems/great-problem/author-sol}
-\input{problems/great-problem/author-blank}
+\input{problems/10/author-task}
+% \input{problems/10/author-sol}
+\input{problems/10/author-blank}
 
 
 \end{document}
