--- a/example/main.tex
+++ b/example/main.tex
@@ -39,7 +39,7 @@
 \include{regulations-rus}
 
 \input{problems/10/author-task}
-% \input{problems/10/author-sol}
+\input{problems/10/author-sol}
 \input{problems/10/author-blank}
 
 
