--- a/example/problems/10/author-blank.tex
+++ b/example/problems/10/author-blank.tex
@@ -12,4 +12,20 @@
 
 \Answerbox{2.5cm}
 
+\problempart
+
+\noindent
+\begin{tabularx}{\textwidth}{|Y|Y|Y|}
+\hline\rowcolor{gray!25}
+\textbf{I} & \textbf{II} & \textbf{III} \\
+\hline
+\filler{2.5cm} & \filler{2.5cm} & \filler{2.5cm} \\
+\hline\rowcolor{gray!25}
+\textbf{A} & \textbf{B} \\
+\cline{1-2}
+\filler{2.5cm} & \filler{2.5cm} \\
+\cline{1-2}
+\end{tabularx}
+
+
 \ansbox{19}{2.5cm}
