--- a/example/problems/10/author-sol.tex
+++ b/example/problems/10/author-sol.tex
@@ -18,7 +18,7 @@
 
     Подставим значения, и получим ответ:
 
-    \[ T = \frac{\qty{4e-3}{\kgmol} \times (\qty{3.5e6}{\meter\per\second})^2}{3 \times \qty{8.314}{\jmolk}} = \qty{561}{\kelvin} \text{ (2 \balla)} \]
+    \[ T = \frac{\qty{4e-3}{\kgmol} \times (\qty{3.5e6}{\mets})^2}{3 \times \qty{8.314}{\jmolk}} = \qty{561}{\kelvin} \text{ (2 \balla)} \]
 \end{solbox}
 
 \begin{solbox}{3 \balla}
@@ -41,5 +41,5 @@
     \[ \frac{r_0}{r_1} = \left( \frac{[\CH{CO}]_0}{[\CH{CO}]_1} \right)^m = \left(\frac{1}{2}\right)^m = \frac12 \]
     \[ m = 1 \]
 
-    Ответ: порядок реакции по угарному газу равен одному (\em{3 \balla}).
+    Ответ: Порядок реакции по угарному газу равен одному (\em{3 \balla}).
 \end{solbox}
