--- a/example/problems/10/author-task.tex
+++ b/example/problems/10/author-task.tex
@@ -4,7 +4,7 @@
 
 \begin{enumerate}
     \item Нарисуйте структуру вещества \CH{C2H6O} если известно, что в нем присутствует OH-группа.
-    \item При какой температуре атомы гелия будут иметь среднеквадратичную скорость \qty{3.5e6}{\meter\per\second}?
+    \item При какой температуре атомы гелия будут иметь среднеквадратичную скорость \qty{3.5e6}{\mets}?
     \item Сколько грамм сахара было растворено в 100 г воды, если ее температура замерзания опустилась до \qty{-1.3}{\celsius}?
 \end{enumerate}
 
