edited commands for atm and torr, edited main.tex

--- a/example/main.tex
+++ b/example/main.tex
@@ -35,8 +35,8 @@
 % \tableofcontents
 % \clearpage
 
-% \include{regulations-kaz}
-\include{regulations-rus}
+% \include{misc/regulations-kaz}
+\include{misc/regulations-rus}
 
 \input{problems/10/author-task}
 \input{problems/10/author-sol}
