added example of using org chem table in a solution

--- a/example/problems/10/author-sol.tex
+++ b/example/problems/10/author-sol.tex
@@ -43,3 +43,22 @@
 
     Ответ: Порядок реакции по угарному газу равен одному (\em{3 \balla}).
 \end{solbox}
+
+\begin{solbox}{8 \ballov}
+    \noindent
+    \begin{tabularx}{\textwidth}{|Y|Y|Y|}
+        \hline\rowcolor{gray!25}
+            \textbf{I} & \textbf{II} & \textbf{III} \\
+        \hline
+            \chemcompound{img/structure-1} & \chemcompound{img/structure-1} & \chemcompound{img/structure-1} \\
+        \hline\rowcolor{gray!25}
+            \textbf{A} & \textbf{B} & \textbf{C} \\
+        \hline
+            \chemcompound{img/structure-2} & \chemcompound{img/structure-2} & \chemcompound{img/structure-2} \\
+        \hline\rowcolor{gray!25}
+            \textbf{X} & \textbf{Y} \\
+        \cline{1-2}
+            \chemcompound[3.5cm]{img/structure-3} & \chemcompound[3.5cm]{img/structure-3} \\
+        \cline{1-2}
+    \end{tabularx}
+\end{solbox}
